--- a/payment/templates/payment/billing_info.html
+++ b/payment/templates/payment/billing_info.html
@@ -54,12 +54,10 @@
     
     Name: {{ shipping_info.shipping_full_name }}<br/>
     Email: {{ shipping_info.shipping_email }}<br/>
-    Address 1: {{ shipping_info.shipping_address1 }}<br/>
-    Address 2: {{ shipping_info.shipping_address2 }}<br/>
-    City: {{ shipping_info.shipping_city }}<br/>
-    State: {{ shipping_info.shipping_state }}<br/>
-    Zipcode: {{ shipping_info.shipping_zipcode }}<br/>
+    Address: {{ shipping_info.shipping_address }}<br/>
     Country: {{ shipping_info.shipping_country }}<br/>
+    County: {{ shipping_info.shipping_county }}<br/>
+    Constituency: {{ shipping_info.shipping_constituency }}<br/>
     <br/>
     <a href="{% url 'checkout' %}" class="btn btn-outline-secondary">Update Shipping</a>
 
@@ -77,7 +75,7 @@
 <div class="card">
   <div class="card-header">
     Billing Info
-  </div>
+  </div> 
   <div class="card-body">
     <form method="POST" action="{% url 'process_order' %}">
       {% csrf_token %}
@@ -90,7 +88,7 @@
 
 
 <button type="submit" class="btn btn-secondary">
-  Pay Now
+  Order Now
 </button>
 </form>
 <br/><br/>
