--- a/store/templates/category.html
+++ b/store/templates/category.html
@@ -45,10 +45,10 @@
 
                                     <!-- Product price-->
                                     <strike>
-                                    ${{ product.price }}
+                                    Ksh {{ product.price }}
                                     </strike>
                                     &nbsp;
-                                    ${{ product.sale_price }}
+                                    Ksh {{ product.sale_price }}
                                 </div>
                             </div>
                             <!-- Product actions-->
