modified settings.py file

--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -117,17 +117,13 @@
             </li>
             <li><hr class="dropdown-divider" /></li>
             <li>
-              <a
-                class="dropdown-item"
-                href="{% url 'category' 'Programming-Books' %}"
-                >Programming Books</a
+              <a class="dropdown-item" href="{% url 'category' 'Shoes' %}"
+                >Shoes</a
               >
             </li>
             <li>
-              <a
-                class="dropdown-item"
-                href="{% url 'category' 'Marketing-Books' %}"
-                >Marketing Books</a
+              <a class="dropdown-item" href="{% url 'category' 'Clothes' %}"
+                >Clothes</a
               >
             </li>
           </ul>
