--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -123,7 +123,7 @@
 
   {% endfor %}
   <div align="right">
-    <h3>Total: ${{ totals }}</h3>
+    <h3>Total: Ksh{{ totals }}</h3>
     <a href="{% url 'checkout' %}" class="btn btn-success">Checkout</a>
   </div>
   <br /><br /><br />
