--- a/payment/templates/payment/billing_info.html
+++ b/payment/templates/payment/billing_info.html
@@ -40,7 +40,7 @@
                 <br/><br/>
 
             {% endfor %}
-            Total:  ${{ totals }}
+            Total:  Ksh{{ totals }}
             <br/><br/>
             <a href="{% url 'cart_summary' %}" class="btn btn-sm btn-outline-secondary">Update Items</a>
           </div>
