--- a/payment/templates/payment/checkout.html
+++ b/payment/templates/payment/checkout.html
@@ -43,7 +43,7 @@
                 <br/><br/>
 
             {% endfor %}
-            Total:  ${{ totals }}
+            Total:  Ksh{{ totals }}
             <br/><br/>
             <a href="{% url 'cart_summary' %}" class="btn btn-sm btn-outline-secondary">Update Items</a>
           </div>
