--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -47,7 +47,7 @@
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">
-          Copyright &copy; Codemy.com 2025
+          Copyright &copy; ShoeDrop.com 2025
         </p>
       </div>
     </footer>
